# SymplecticIntegrator

./: .dockerignore  .env.docker  .gitignore  ARCHITECTURE.html  ARCHITECTURE.md  CMakeLists.txt  CONTAINERIZATION_COMPLETE.html  CONTAINERIZATION_COMPLETE.md  CONTAINERIZATION_SUMMARY.html  DOCKER.html  DOCKER.md  DOCKER_QUICK_REFERENCE.html  DOCKER_QUICK_REFERENCE.md  Dockerfile  Dockerfile.multistage  MANIFEST.html  MANIFEST.md  QUICKSTART.html  QUICKSTART.md  README.md  README_CONTAINERIZATION.html  README_CONTAINERIZATION.md  SUMMARY.html  SUMMARY.md  TODO.html  TODO.md  benchmark_experiment_documentation.html  cuda_implementation_documentation.html  docker-compose.yml  index.html  symplectic_integrator_documentation.html
.github/: copilot-instructions.md
.github/workflows/: build-jupyterlite.yml  ci.yml
docs/: ARCHITECTURE.md  CONTAINERIZATION_COMPLETE.md  CONTAINERIZATION_SUMMARY.md  DOCKER.md  DOCKER_QUICK_REFERENCE.md  Gemfile  MANIFEST.md  QUICKSTART.md  README_CONTAINERIZATION.md  SUMMARY.md  TODO.md  _config.yml  benchmark_experiment_documentation.md  cuda_implementation_documentation.md  index.md  symplectic_integrator_documentation.md
docs/_layouts/: default.html
docs/notebooks/: energy_conservation_comparison.ipynb
include/: henon_heiles.h  integrators.h
lite/api/contents/: all.json
lite/files/: energy_conservation_comparison.ipynb
notebooks/: 01_cpu_benchmark.ipynb
scripts/: docker-build.sh  docker-clean.sh  docker-gpu-test.sh  docker-run.sh
src/cpu/: __init__.py  analysis.py  benchmark.py  henon_heiles.py  integrators.py
src/gpu/: example.cpp  integrators.cu
tests/: CMakeLists.txt
